--- a/public/client/css/style.css
+++ b/public/client/css/style.css
@@ -633,6 +633,50 @@ ol {
 	display: block;
 }
 
+
+.dropbtn {
+	background-color: #fff;
+	color: white;
+	padding: 1px;
+	font-size: 2px;
+	border: none;
+	cursor: pointer;
+  }
+  
+  .dropdown {
+	position: relative;
+	display: inline-block;
+  }
+  
+  .dropdown-content {
+	display: none;
+	position:absolute;
+	right: 0;
+	background-color: #f9f9f9;
+	min-width: 160px;
+	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+	z-index: 1;
+  }
+  
+  .dropdown-content a {
+	color: black;
+	padding: 12px 16px;
+	text-decoration: none;
+	display: block;
+  }
+  
+  .dropdown-content a:hover {background-color: #f1f1f1;}
+  
+  .dropdown:hover .dropdown-content {
+	display: block;
+  }
+  
+  .dropdown:hover .dropbtn {
+	background-color: #f5f5f5;
+  }
+  
+
+
 .hero__search {
 	overflow: hidden;
 	margin-bottom: 30px;
