--- a/public/client/css/style.css
+++ b/public/client/css/style.css
@@ -617,9 +617,10 @@ ol {
 
 .hero__categories ul {
 	border: 1px solid #ebebeb;
-	padding-left: 40px;
+	padding-left: 15px;
 	padding-top: 10px;
 	padding-bottom: 12px;
+	z-index: 2;
 }
 
 .hero__categories ul li {
@@ -658,14 +659,16 @@ ol {
 	z-index: 1;
   }
   
-  .dropdown-content a {
+.dropdown-content a {
 	color: black;
 	padding: 12px 16px;
 	text-decoration: none;
 	display: block;
   }
   
-  .dropdown-content a:hover {background-color: #f1f1f1;}
+.dropdown-content a:hover {
+	background-color: #f1f1f1;
+}
   
   .dropdown:hover .dropdown-content {
 	display: block;
@@ -906,6 +909,17 @@ ol {
 	position: relative;
 	overflow: hidden;
 	background-position: center center;
+}
+
+.item-image-products{
+	display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.item-image-products img{
+	width: 200px;
+	height: 200px;
 }
 
 .featured__item__pic__hover {
@@ -2965,7 +2979,7 @@ ol {
 		padding: 10px 25px 10px 20px;
 	}
 	.hero__categories ul {
-		padding-left: 20px;
+		padding-left: 5px;
 	}
 	.latest-product__slider.owl-carousel .owl-nav {
 		right: 0;
@@ -2985,7 +2999,7 @@ ol {
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
 	.hero__categories {
-		margin-bottom: 30px;
+		margin-bottom: 10px;
 	}
 	.hero__search__form {
 		width: 485px;
@@ -3208,7 +3222,7 @@ ol {
 
 @media only screen and (max-width: 767px) {
 	.hero__categories {
-		margin-bottom: 30px;
+		margin-bottom: 10px;
 	}
 	.hero__search {
 		margin-bottom: 30px;
