--- a/public/client/css/style.css
+++ b/public/client/css/style.css
@@ -430,8 +430,9 @@ ol {
 	position: absolute;
 	left: 0;
 	top: 50px;
-	background: #222222;
-	width: 180px;
+	background: #534e4e;
+	opacity: 0.7;
+	width: 190px;
 	z-index: 9;
 	padding: 5px 0;
 	-webkit-transition: all, 0.3s;
