--- a/public/client/css/style.css
+++ b/public/client/css/style.css
@@ -2120,7 +2120,7 @@ ol {
 	background: #f5f5f5;
 	padding: 30px;
 	padding-top: 20px;
-	margin-top: 50px;
+	margin-top: 0;
 }
 
 .shoping__checkout h5 {
