--- a/public/client/css/style.css
+++ b/public/client/css/style.css
@@ -170,7 +170,19 @@ ol {
 	background: #7fad39;
 	letter-spacing: 2px;
 }
-
+.primary-btn-order
+{
+	display: inline-block;
+	font-size: 14px;
+	padding: 10px 28px 10px;
+	color: #ffffff;
+	text-transform: uppercase;
+	font-weight: 700;
+	background: #7fad39;
+	letter-spacing: 2px;
+	width: 100%;
+	text-align: center;
+}
 .site-btn {
 	font-size: 14px;
 	color: #ffffff;
@@ -1834,9 +1846,9 @@ ol {
 }
 
 .product__details__text ul {
-	border-top: 1px solid #ebebeb;
-	padding-top: 40px;
-	margin-top: 50px;
+	border-bottom: 1px solid #ebebeb;
+	padding-bottom: 10px;
+	margin-bottom: 20px;
 }
 
 .product__details__text ul li {
