--- a/public/client/css/style.css
+++ b/public/client/css/style.css
@@ -1998,6 +1998,10 @@ ol {
 	padding-top: 44px;
 }
 
+.product__details__tab .product__details__tab__desc p ul li div {
+	margin-top: 44px;
+}
+
 .product__details__tab .product__details__tab__desc h6 {
 	font-weight: 700;
 	color: #333333;
